# ms-teams-tickertape

./: DOCUMENTATION.md  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.md  README.nl.md  README.zh-CN.md  README.zh-TW.md  REFERENCES.md  pyproject.toml
300/: README.md
300/100/: README.md
300/100/100/: README.md
300/100/200/: README.md
300/100/300/: README.md
300/100/400/: README.md
300/100/500/: README.md
300/100/600/: README.md
300/100/700/: README.md
ticker-tape/: .gitignore  LICENSE.txt  README.md  package.json  pyproject.toml  requirements.txt
ticker-tape/src/ticker_tape/: __about__.py  __init__.py  app.py  package-lock.json  package.json  tailwind.config.js
ticker-tape/src/ticker_tape/components/: Dashboard.js  Messages.js  TickerTape.js  Tickertape.test.js  dashboard.test.js  index.js
ticker-tape/src/ticker_tape/config/: __init__.py  baseConfig.py  developmentConfig.py  productionConfig.py
ticker-tape/src/ticker_tape/forms/: __init__.py  dashboard_form.py
ticker-tape/src/ticker_tape/models/: __init__.py  dashboard_model.py
ticker-tape/src/ticker_tape/routes/: __init__.py  dashboard_routes.py  main_routes.py
ticker-tape/src/ticker_tape/static/: messages.json
ticker-tape/src/ticker_tape/static/js/: 364.app.js  app.js
ticker-tape/src/ticker_tape/templates/: footer.html  navbar.html
ticker-tape/src/ticker_tape/templates/dashboard/: view_dashboard.html
ticker-tape/src/ticker_tape/utils/: __init__.py  app_utils.py
ticker-tape/src/ticker_tape/workflows/: __init__.py  dashboard_workflow.py
ticker-tape/tests/: __init__.py  test_app.py
